[gd_scene load_steps=13 format=3 uid="uid://dh4cjxs7i6o8c"]

[ext_resource type="Script" path="res://Scripts/Buttons/pause_menu.gd" id="1_87pjb"]
[ext_resource type="Script" path="res://Scripts/floating_ui.gd" id="2_dm8fx"]
[ext_resource type="Script" path="res://Scripts/Buttons/GamepadUI.gd" id="2_gauam"]
[ext_resource type="Texture2D" uid="uid://ctdmg0n2p42nd" path="res://Assets/Icons/menu.svg" id="3_60wth"]
[ext_resource type="Texture2D" uid="uid://dhktegc0h20rg" path="res://Assets/Icons/close.svg" id="4_x5f66"]
[ext_resource type="Script" path="res://Scripts/pause_menu_button.gd" id="5_1twl6"]
[ext_resource type="Texture2D" uid="uid://dnpcfbs2utfjp" path="res://Assets/Icons/home.svg" id="6_3c6h6"]
[ext_resource type="Texture2D" uid="uid://bjr6dxpi0x8o4" path="res://Assets/Icons/refresh.svg" id="7_6n21h"]
[ext_resource type="Texture2D" uid="uid://dkeqs1v1awguo" path="res://Assets/Icons/settings.svg" id="8_hp646"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_02sbc"]

[sub_resource type="Shader" id="Shader_npsy0"]
code = "shader_type canvas_item;

uniform float amount: hint_range(0.0, 5.0);
uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_linear_mipmap;

void fragment() {
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, amount).rgb;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ylv5p"]
shader = SubResource("Shader_npsy0")
shader_parameter/amount = 2.0

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 100
material = SubResource("ShaderMaterial_02sbc")
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_87pjb")
showPosition = Vector2(6.5, 0.5)

[node name="Blur" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_ylv5p")
layout_mode = 0
offset_left = -3128.0
offset_top = -2534.0
offset_right = 6599.0
offset_bottom = 4396.0

[node name="SuperContainer" type="Control" parent="." node_paths=PackedStringArray("FirstControl")]
anchors_preset = 0
script = ExtResource("2_gauam")
FirstControl = NodePath("Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton")

[node name="Container" type="Control" parent="SuperContainer"]
anchors_preset = 0
offset_left = -214.0
offset_top = -47.0
offset_right = 204.0
offset_bottom = 48.0
pivot_offset = Vector2(215, 47)
mouse_filter = 2

[node name="Control" type="Control" parent="SuperContainer/Container"]
anchors_preset = 0
scale = Vector2(0.25, 0.25)
script = ExtResource("2_dm8fx")
vertical_intensity = 5.0
horizontal_intensity = 3

[node name="DropDownButton" type="TextureButton" parent="SuperContainer/Container/Control"]
layout_mode = 2
offset_left = -4.0
offset_top = -4.0
offset_right = 380.0
offset_bottom = 380.0
pivot_offset = Vector2(47, 46)
focus_neighbor_left = NodePath("../../DropdownSection/DropDownMenu/CenterContainer/QuitButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../../DropdownSection/DropDownMenu/CenterContainer2/RestartButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../../DropdownSection/DropDownMenu/CenterContainer2/RestartButton")
focus_previous = NodePath("../../DropdownSection/DropDownMenu/CenterContainer/QuitButton")
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource("3_60wth")
texture_pressed = ExtResource("4_x5f66")
script = ExtResource("5_1twl6")

[node name="DropdownSection" type="Control" parent="SuperContainer/Container"]
clip_contents = true
layout_mode = 2
anchors_preset = 0
anchor_left = 0.208
anchor_right = 1.021
anchor_bottom = 1.034
offset_left = 5.056
offset_right = -256.778
offset_bottom = -90.23
scale = Vector2(4.29972, 12.2796)
mouse_filter = 2

[node name="DropDownMenu" type="HBoxContainer" parent="SuperContainer/Container/DropdownSection"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.082
anchor_top = 0.062
anchor_right = 2.057
anchor_bottom = 2.042
offset_left = 0.0219998
offset_top = 0.00399998
offset_right = 207.123
offset_bottom = 85.164
scale = Vector2(0.05, 0.017)
mouse_filter = 2
theme_override_constants/separation = 150

[node name="CenterContainer2" type="CenterContainer" parent="SuperContainer/Container/DropdownSection/DropDownMenu"]
layout_mode = 2
script = ExtResource("2_dm8fx")
vertical_intensity = 5.0
horizontal_intensity = 3

[node name="RestartButton" type="TextureButton" parent="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2"]
layout_mode = 2
focus_neighbor_left = NodePath("../../../../Control/DropDownButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../../CenterContainer3/SettingsButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../../CenterContainer3/SettingsButton")
focus_previous = NodePath("../../../../Control/DropDownButton")
texture_normal = ExtResource("7_6n21h")
script = ExtResource("5_1twl6")

[node name="CenterContainer3" type="CenterContainer" parent="SuperContainer/Container/DropdownSection/DropDownMenu"]
layout_mode = 2
script = ExtResource("2_dm8fx")
vertical_intensity = 5.0
horizontal_intensity = 3

[node name="SettingsButton" type="TextureButton" parent="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3"]
layout_mode = 2
focus_neighbor_left = NodePath("../../CenterContainer2/RestartButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../../CenterContainer/QuitButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../../CenterContainer/QuitButton")
focus_previous = NodePath("../../CenterContainer2/RestartButton")
texture_normal = ExtResource("8_hp646")
script = ExtResource("5_1twl6")

[node name="CenterContainer" type="CenterContainer" parent="SuperContainer/Container/DropdownSection/DropDownMenu"]
layout_mode = 2
script = ExtResource("2_dm8fx")
vertical_intensity = 5.0
horizontal_intensity = 3

[node name="QuitButton" type="TextureButton" parent="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../CenterContainer3/SettingsButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../../../../Control/DropDownButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../../../../Control/DropDownButton")
focus_previous = NodePath("../../CenterContainer3/SettingsButton")
texture_normal = ExtResource("6_3c6h6")
script = ExtResource("5_1twl6")

[connection signal="focus_entered" from="SuperContainer/Container/Control/DropDownButton" to="SuperContainer/Container/Control/DropDownButton" method="_on_mouse_entered"]
[connection signal="focus_exited" from="SuperContainer/Container/Control/DropDownButton" to="SuperContainer/Container/Control/DropDownButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="SuperContainer/Container/Control/DropDownButton" to="SuperContainer/Container/Control/DropDownButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SuperContainer/Container/Control/DropDownButton" to="SuperContainer/Container/Control/DropDownButton" method="_on_mouse_exited"]
[connection signal="pressed" from="SuperContainer/Container/Control/DropDownButton" to="." method="_on_drop_down_button_pressed"]
[connection signal="pressed" from="SuperContainer/Container/Control/DropDownButton" to="SuperContainer/Container/Control/DropDownButton" method="_on_pressed"]
[connection signal="toggled" from="SuperContainer/Container/Control/DropDownButton" to="." method="_on_drop_down_button_toggled"]
[connection signal="toggled" from="SuperContainer/Container/Control/DropDownButton" to="SuperContainer/Container/Control/DropDownButton" method="_on_toggled"]
[connection signal="focus_entered" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" method="_on_mouse_entered"]
[connection signal="focus_exited" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" method="_on_mouse_exited"]
[connection signal="pressed" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer2/RestartButton" method="_on_pressed"]
[connection signal="focus_entered" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" method="_on_mouse_entered"]
[connection signal="focus_exited" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" method="_on_mouse_exited"]
[connection signal="pressed" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer3/SettingsButton" method="_on_pressed"]
[connection signal="focus_entered" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" method="_on_mouse_entered"]
[connection signal="focus_exited" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" method="_on_mouse_exited"]
[connection signal="pressed" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" to="SuperContainer/Container/DropdownSection/DropDownMenu/CenterContainer/QuitButton" method="_on_pressed"]
